--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,37 @@
 }
 
 .list-container {
-    max-height: 100vh;
-    overflow-y: auto;
+    padding-top: 100px;
+}
+
+.search-container {
+    position: fixed;
+    z-index: 1;
+    background: #10154C;
+    left: 0;
+    right: 0;
+}
+
+.float {
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 20px;
+    right: 20px;
+    background-color: #25d366;
+    color: #FFF;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 2px 2px 3px #999;
+    z-index: 100;
+}
+
+.float:active,
+.float:hover {
+    color: #FFF;
+}
+
+.my-float {
+    margin-top: 16px;
 }
